--- a/토비의 스프링 3.1 - 스프링의 이해와 원리/1장_오브젝트와의존관계.md
+++ b/토비의 스프링 3.1 - 스프링의 이해와 원리/1장_오브젝트와의존관계.md
@@ -53,8 +53,5 @@ public class User{
 >   * 요즘은 컴파일러가 디폴트 생성자를 자동으로 생성한다. 단, 클래스에 다른 생성자를 하나라도 직접 선언하면 컴파일러가 디폴트 생성자를 자동으로 생성하지 않는다. 또는 스프링부트의 어노테이션을 활용하여 자동으로 디폴트 생성자 생성이 가능하다. 
 > * 프로퍼티 : 자바빈이 노출하는 이름을 가진 속성을 프로퍼티라고 한다. 프로퍼티는 set으로 시작하는 수정자 메소드(setter)와 get으로 시작하는 접근자 메소드(getter)를 이용해 수정 또는 조회 할 수 있다.
 
-#### 빈에 대한 정리 
-
-* [빈이란?](./study/빈이란.md)
-* 
+###### [빈이란?](./study/빈이란.md) 
 
