--- a/토비의 스프링 3.1 - 스프링의 이해와 원리/1장_오브젝트와의존관계.md
+++ b/토비의 스프링 3.1 - 스프링의 이해와 원리/1장_오브젝트와의존관계.md
@@ -11,7 +11,7 @@
 public class User{
     String id;
     String name;
-    String password:
+    String password;
     
 	public String getId(){
         return id;
